# Building-matching-WebAPI

./: Dockerfile  Dockerfile-armmac  Dockerfile-gunicorn  Pipfile  README.md  default.md  docker-compose-armmac.yml  docker-compose.yml  docker.env  env-dist  index.html  manifest.json  openapi.yaml  pyproject.toml  requirements.txt  run_appserver.sh  run_devserver.sh  toc.html
app/: __init__.py  api.py  app.py  build3d.py  database.py  model.py  pointcloud.py  zukaku.py
app/templates/: base.html  index.html  match2d.html  match3d.html
dbbuild/: .gitignore  docker-compose.yml  gdal_operation.md
dbbuild/conf/: 01_convert_plateau.sql  10_create_plateau_table.sql  plateau_buildings.gfs  plateau_buildings_lod0.gfs  plateau_buildings_lod1.gfs  plateau_buildings_lod2.gfs  store_plateau.sh
docs/: 01_install.md  02_demo.md  10_webapi.md  90_create_data.md  99_about.md  _config.yml  index.md
docs/_posts/: 2023-02-18-welcome-to-jekyll.markdown
initdb.d/: .gitignore  restoredb.sh
manual/: 01_install.html  02_demo.html  10_webapi.html  90_create_data.html  toc.html
