[tool.poetry]
name = "plateau-webapi"
version = "0.1.0"
description = "Matching Web API to Plateau Buildings"
authors = ["Takeshi Sagara <sagara@info-proto.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-Cors = "^3.0.10"
GeoAlchemy2 = "^0.10.2"
psycopg2-binary = "^2.9.3"
shapely = "^1.8.2"
geopandas = "^0.10.2"
requests = "^2.28.1"
gunicorn = "^20.1.0"
open3d = "^0.12.0.0"
laspy = "^2.0"
python-dotenv = "^0.21.0"
markdown = "^3.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
